--- a/css/panets.css
+++ b/css/panets.css
@@ -1,3 +1,5 @@
+/* --------------------- GLOBAL --------------------- */
+
 @import url('https://fonts.googleapis.com/css2?family=Strait&display=swap');
 @import url(./animations.css);
 
@@ -31,6 +33,8 @@ body {
     animation: appear 2s ease-in-out 1 forwards;
 }
 
+/* --------------------- HEADER --------------------- */
+
 header {
     position: absolute;
     top: 0;
@@ -57,6 +61,10 @@ header {
     text-shadow: black 0.1em 0.1em 0.2em
 }
 
+.grey__text{
+    color: #88898C;
+}
+
 nav {
     display: flex;
     gap: 3rem;
@@ -65,20 +73,7 @@ nav {
     border-radius: 1rem;
 }
 
-.grey__text{
-    color: #88898C;
-}
-
-@keyframes appear {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
+/* --------------------- THREE.JS CANVAS --------------------- */
 
 canvas {
     width: 100%;
