--- a/css/rotation.css
+++ b/css/rotation.css
@@ -1,24 +1,8 @@
-nav {
-    display: flex;
-    gap: 3rem;
-    background-color: #88898C;
-    padding: 1rem;
-    border-radius: 1rem;
+#content {
+    grid-template-columns: 40% 60%;
 }
 
-#back__btn {
-    width: 10rem;
-    font-family: var(--font-text);
-    font-size: 2.3rem;
-    border-radius: 1rem;
-    border: none;
-    padding: 0.6rem;
-    margin-top: 1rem;
-    cursor: pointer;
-    background-color: #88898C;
-    opacity: 0;
-    animation: get-big 1s 1 1s forwards;
-}
+/* --------------------- IMAGE --------------------- */
 
 .shadow {
     height: 29rem;
@@ -32,22 +16,21 @@ nav {
     justify-self: end;
 }
 
-.title {
-    font-size: 8rem;
-}
-
-#content {
-    grid-template-columns: 40% 60%;
-}
-
+/* --------------------- TEXT CONTENT --------------------- */
 .content__container{
     justify-self: start;
     padding: 0;
 }
 
+.title {
+    font-size: 8rem;
+}
+
 .text {
     width: 70rem;
 }
+
+/* --------------------- BTN --------------------- */
 
 .btn__container {
     display: flex;
