--- a/css/panets.css
+++ b/css/panets.css
@@ -57,20 +57,12 @@ header {
     font-family: var(--font-text);
     text-decoration: none;
     color: #f6f6f6;
-    font-size: 2rem;
-    text-shadow: black 0.1em 0.1em 0.2em
+    font-size: 2.5rem;
+    text-shadow: black 0.2em 0.2em 0.2em
 }
 
 .grey__text{
     color: #88898C;
-}
-
-nav {
-    display: flex;
-    gap: 3rem;
-    background-color: #88898C;
-    padding: 1rem;
-    border-radius: 1rem;
 }
 
 /* --------------------- THREE.JS CANVAS --------------------- */
@@ -79,3 +71,95 @@ canvas {
     width: 100%;
     height: 100vh;
 }
+
+/* --------------------- ASIDE --------------------- */
+
+aside {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    background-image: url(../assets/background.jpg);
+    background-size: cover;
+    padding: 1rem;
+    border-radius: 1rem;
+    overflow: hidden;
+    position: absolute;
+    right: 0;
+    margin: 2.7rem 4rem;
+    z-index: 1;
+    opacity: 0.6;
+}
+
+#sun__icon {
+    width: 5rem;
+    cursor: pointer;
+    /* display: none; */
+}
+
+.planet__img {
+    width: 2rem;
+}
+
+.planet {
+    display: flex;
+    align-items: center;
+    gap: 0.7rem;
+}
+
+.planet__container {
+    display: none;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+/* --------------------- TEXT CONTENT --------------------- */
+
+.content {
+    overflow: hidden;
+    position: absolute;
+    right: 0;
+    top: 25%;
+    color: #f6f6f6;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 60rem;
+    height: 34rem;
+    margin-right: 8%;
+    text-align: justify;
+}
+
+.text__presentation {
+    font-size: 2rem;
+}
+
+.text__content {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 55rem;
+    padding: 4rem;
+    z-index: 1;
+}
+
+.container {
+    overflow: hidden;
+    position: absolute;
+    width: 60rem;
+    height: 34rem;
+    background-image: url(../assets/background.jpg);
+    background-size: cover;
+    opacity: 0.7;
+    border-radius: 2rem;
+}
+
+ul {
+    margin-left: 2rem;
+}
+
+.title {
+    font-family: var(--font-title);
+    font-size: 5rem;
+    text-shadow: black 0.1em 0.1em 0.2em;
+}
+
