--- a/css/panets.css
+++ b/css/panets.css
@@ -112,19 +112,23 @@ aside {
     gap: 3rem;
 }
 
+a:hover {
+    transform: scale(1.1);
+}
+
 /* --------------------- TEXT CONTENT --------------------- */
 
 .content {
     overflow: hidden;
     position: absolute;
     right: 0;
-    top: 25%;
+    top: 23%;
     color: #f6f6f6;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     width: 60rem;
-    height: 34rem;
+    height: 37rem;
     margin-right: 8%;
     text-align: justify;
 }
@@ -136,9 +140,9 @@ aside {
 .text__content {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 3rem;
     width: 55rem;
-    padding: 4rem;
+    padding: 3rem 4rem;
     z-index: 1;
 }
 
@@ -146,7 +150,7 @@ aside {
     overflow: hidden;
     position: absolute;
     width: 60rem;
-    height: 34rem;
+    height: 37rem;
     background-image: url(../assets/background.jpg);
     background-size: cover;
     opacity: 0.7;
@@ -155,6 +159,9 @@ aside {
 
 ul {
     margin-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
 }
 
 .title {
